# superprompt-webui

./: README.md  app.py  karma.conf.js  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  routes_login.py
libs/: db_models.py  initialize_db.py
static/: app.js  mainController.js  mainControllerUtils.js
templates/: home.html  login.html  profile.html  results.html
test/: mainController.spec.js
