[tool.poetry]
name = "webui"
version = "0.1.0"
description = ""
authors = ["Caleb <calebcauthon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
gunicorn = "^22.0.0"
flask-sqlalchemy = "^3.1.1"
requests = "^2.31.0"
modal = "^0.62.175"
psycopg2 = "^2.9.9"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
